adding features in Viewport render with OpenCL doesn't trigger a kernel recompile anymore #49496

Closed
opened 2016-09-30 00:12:07 +02:00 by mathieu menuet · 13 comments

System Information
all vendors

Blender Version
Broken: 2.78
Worked: original patch from AMD for split kernel if I remember correctly.

Short description of error
When adding hairs for example while in viewport render, the kernel will not recompile, making the hairs invisible. User has to toggle twice the render mode for the viewport to get it display the scene correctly. No hints is given about what is wrong.

Exact steps for others to reproduce the error
Start viewport render on the default cube scene and add a hair system. It doesn't render. Toggling to solid mode and back to rendered mode solves the problem.

**System Information** all vendors **Blender Version** Broken: 2.78 Worked: original patch from AMD for split kernel if I remember correctly. **Short description of error** When adding hairs for example while in viewport render, the kernel will not recompile, making the hairs invisible. User has to toggle twice the render mode for the viewport to get it display the scene correctly. No hints is given about what is wrong. **Exact steps for others to reproduce the error** Start viewport render on the default cube scene and add a hair system. It doesn't render. Toggling to solid mode and back to rendered mode solves the problem.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Sergey Sharybin was assigned by Bastien Montagne 2016-09-30 10:52:48 +02:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

@bliblubli is this still an issue?

@bliblubli is this still an issue?
Sergey Sharybin removed their assignment 2017-05-12 16:08:35 +02:00
Mai Lavelle was assigned by Sergey Sharybin 2017-05-12 16:08:35 +02:00

Added subscribers: @MaiLavelle, @Sergey

Added subscribers: @MaiLavelle, @Sergey

it is still an issue.

@MaiLavelle, mind giving some help here? The issue here is that we'll need to somehow teach ccl::Session to re-load kernels when something changes.

it is still an issue. @MaiLavelle, mind giving some help here? The issue here is that we'll need to somehow teach `ccl::Session` to re-load kernels when something changes.

This issue was referenced by blender/cycles@ed1498b61e

This issue was referenced by blender/cycles@ed1498b61ecac29f962616551f749804d66967b5

This issue was referenced by 177385dc43

This issue was referenced by 177385dc439b4f6b478a033413a8df992e7f5ed3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

Kernels recompiles now, but on every change, even those that don't change anything to the used kernel. For example, max_closure is set to 64 for viewport rendering to prevent recompiling. Since this patch however, adding a shader to the nodetree triggers a recompile, although having 1 or 2 shader is not important as it will be set to 64 anyway.

So in current state, we have worse of both worlds. The recompile of the kernels and no selective compilation so slower kernel.

Kernels recompiles now, but on every change, even those that don't change anything to the used kernel. For example, max_closure is set to 64 for viewport rendering to prevent recompiling. Since this patch however, adding a shader to the nodetree triggers a recompile, although having 1 or 2 shader is not important as it will be set to 64 anyway. So in current state, we have worse of both worlds. The recompile of the kernels and no selective compilation so slower kernel.
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

it seems to work properly on another computer, will investigate more. Closing in the meantime.

it seems to work properly on another computer, will investigate more. Closing in the meantime.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49496
No description provided.