Cycles: Reload kernels from Session when requested features change

This fixes T49496.